--- a/src/00-homepage/styles/YellowWaveReverse.scss
+++ b/src/00-homepage/styles/YellowWaveReverse.scss
@@ -10,29 +10,30 @@ $wave-height: 40px;
     width: 100%;
     height: 60px;
     overflow: hidden;
-    background-color: $main-yellow;
+    // background-color: #fdefc2;
+    background-color: #fff;
 
     .y-wave-reverse-base {
         // width: 100%;
         // height: $wave-height;
-        // background-color: $main-yellow;
+        background-color: $main-yellow;
     }
     .y-wave-reverse-wrap {
         // position: absolute;
         // top: $wave-height;
         width: 100%;
-        height: 100%;
+        height: 60px;
         background: {
             image: url(./../images/wave-1920px-reverse.png);
-            repeat: no-repeat;
-            position: 0 0;
+            // repeat: no-repeat;
+            position: 50% 0;
             size: 1920px 60px;
         }
-        animation: animate 3.5s linear infinite;
+        animation: y-wave-yellow-reverse 3.5s linear infinite;
         z-index: 100;
         animation-delay: 0.3s;
         
-        @keyframes animate {
+        @keyframes y-wave-yellow-reverse {
             0% {
                 background-position-x: 0;
             }
