--- a/src/03-shop/styles/03-shop-card.scss
+++ b/src/03-shop/styles/03-shop-card.scss
@@ -102,7 +102,7 @@ $card-btn: #80b938;
           padding-top: 5px;
           .r-card-button-a {
             position: relative;
-            width: 100%;
+            width: 250px;
             height: 40px;
             background: $main-orange;
             display: flex;
@@ -112,7 +112,6 @@ $card-btn: #80b938;
             gap: 10px;
             text-decoration: none;
             letter-spacing: 0.2rem;
-
             font-weight: 700;
             border: 3px solid #333;
             border-radius: 8px;
@@ -149,7 +148,7 @@ $card-btn: #80b938;
               }
             }
           }
-          a::before {
+          .r-card-button-a::before {
             content: '';
             position: absolute;
             top: 0;
@@ -161,11 +160,11 @@ $card-btn: #80b938;
             transition: transform 0.5s ease-in-out;
             transform-origin: right;
           }
-          a:hover::before {
+          .r-card-button-a:hover::before {
             transform: scaleX(1);
             transform-origin: left;
           }
-          a:hover {
+          .r-card-button-a:hover {
             span {
               color: #fff;
             }
