--- a/src/05-member/style/profile-pages/LikesProduct.scss
+++ b/src/05-member/style/profile-pages/LikesProduct.scss
@@ -32,7 +32,7 @@
 
     .s-l-p-card-inside {
       width: 100%;
-      height: 100%;
+      // height: 100%;
       display: flex;
       flex-wrap: wrap;
       overflow-y: scroll;
@@ -59,7 +59,9 @@
 
       .r-love-card-container {
         width: 23%;
+        height: 200px;
         margin: 5px;
+
         // border: 1px solid #000;
         .r-love-card-title {
           height: 30px;
